# url-shortener

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: endpoints.rs  errors.rs  id.rs  index.html  main.rs
