[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.8.1", features = ["macros"] }
bb8 = "0.9.0"
bb8-redis = "0.20.0"
dotenvy = "0.15.7"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5.2"
